# project-euler-rust

./: .rustfmt.toml  Cargo.toml  LICENSE  run.sh
src/: main.rs
src/lib/: continued_fractions.rs  duration_formatter.rs  misc.rs  mod.rs  new.rs  numbers.rs  primes.rs  utils.rs
src/lib/problems/: mod.rs
src/lib/problems/h00/: mod.rs
src/lib/problems/h00/t0/: mod.rs  p0001.rs  p0002.rs  p0003.rs  p0004.rs  p0005.rs  p0006.rs  p0007.rs  p0008.rs  p0009.rs  p1.rs  p3.rs  p4.rs  p5.rs  p7.rs  p8.rs
src/lib/problems/h00/t1/: mod.rs  p0010.rs  p0011.rs  p0012.rs  p0013.rs  p0014.rs  p0015.rs  p0016.rs  p0017.rs  p0018.rs  p0019.rs  p3.rs  p4.rs  p5.rs  p7.rs  p8.rs
src/lib/problems/h00/t2/: mod.rs  p0020.rs  p0021.rs  p0022.rs  p0023.rs  p0024.rs  p0025.rs  p0026.rs  p0027.rs  p0028.rs  p0029.rs  p2.rs  p3.rs  p4.rs
src/lib/problems/h00/t3/: mod.rs  p0030.rs  p0031.rs  p0032.rs  p0033.rs  p0034.rs  p0035.rs  p0036.rs  p0037.rs  p0038.rs  p0039.rs
src/lib/problems/h00/t4/: mod.rs  p0040.rs  p0041.rs  p0042.rs  p0043.rs  p0044.rs  p0045.rs  p0046.rs  p0047.rs  p0048.rs  p0049.rs
src/lib/problems/h00/t5/: mod.rs  p0050.rs  p0051.rs  p0052.rs  p0053.rs  p0054.rs  p0055.rs  p0056.rs  p0057.rs  p0058.rs  p0059.rs
src/lib/problems/h00/t6/: mod.rs  p0060.rs  p0061.rs  p0062.rs  p0063.rs  p0064.rs  p0065.rs  p0066.rs  p0067.rs  p0068.rs  p0069.rs
src/lib/problems/h00/t7/: mod.rs  p0070.rs  (+9 more)
src/lib/problems/h01/: mod.rs
src/lib/problems/p00/: mod.rs
src/lib/template/: macros.rs  mod.rs  utils.rs
templates/: h_mod.j2  p_mod.j2  problems_mod.j2  t_mod.j2
(+41 files in other folders)
