[package]
name = "project-euler-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
cached = "0.53.1"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
minijinja = { version = "2.4.0", features = ["loader"] }
num = "0.4.1"
path_macro = "1.0.0"
